2005-08-01  Daniel Jacobowitz  <dan@codesourcery.com>

	* dwarf2-frame.c (read_signed_leb128): Handle values that do not
	fit in 32 bits.
	* dwarf2read.c (read_signed_leb128): Likewise.

2005-07-31  Daniel Jacobowitz  <dan@codesourcery.com>

	From Josef Ezra <jezra@emc.com>:
	* tracepoint.c (stringify_collection_list): Correct pointer
	arithmetic.

2005-07-31  Daniel Jacobowitz  <dan@codesourcery.com>

	Suggested by Vladimir Prus <ghost@cs.msu.su>:
	* infrun.c (handle_inferior_event): Check for line information in
	undebuggable functions.

2005-07-31  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* cli-out.c (cli_field_fmt, cli_message, out_field_fmt): Add
	ATTR_FORMAT or ATTRIBUTE_FPTR_PRINTF.
	* complaints.c (vcomplaint): Likewise.
	* defs.h (xvasprintf, xstrvprintf, verror, vfatal)
	(internal_verror, internal_vwarning, vwarning)
	(deprecated_query_hook, deprecated_warning_hook)
	(deprecated_readline_begin_hook): Likewise.
	* disasm.c (fprintf_disasm): Likewise.
	* exceptions.c (throw_it): Likewise.
	* exceptions.h (throw_verror, throw_vfatal): Likewise.
	* mi/mi-interp.c (mi_interp_query_hook): Likewise.
	* mi/mi-out.c (mi_field_fmt, mi_message): Likewise.
	* tui/tui-hooks.c (tui_query_hook): Likewise.
	* tui/tui-out.c (tui_field_fmt, tui_message, out_field_fmt):
	Likewise.
	* ui-out.c (default_field_fmt, default_message, uo_field_fmt)
	(uo_message): Likewise.
	* ui-out.h (ui_out_field_fmt, ui_out_message, field_fmt_ftype)
	(message_ftype): Likewise.
	* utils.c (vfprintf_maybe_filtered, internal_vproblem)
	(defaulted_query, printchar): Likewise.
	
2005-07-26  Mark Kettenis  <kettenis@gnu.org>

	* i386obsd-tdep.c (i386obsd_sigreturn_offset): New variable.
	(i386obsd_sigtramp_p): Deal with an arbitrary number of possible
	offsets.
	(i386obsd_aout_supply_regset): Avoid bogus cast.

2005-07-25  Mark Kettenis  <kettenis@gnu.org>

	* inf-ptrace.c [PT_GET_PROCESS_STATE] (inf_ptrace_follow_fork):
	New function.