@@ -1,3 +1,8 @@
+2005-08-01  Fred Fish  <fnf@specifix.com>
+
+	* stack.c (parse_frame_specification_1): Remove use of obsolete
+	SETUP_ARBITRARY_FRAME macro.
+
 2005-08-01  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* dwarf2-frame.c (read_signed_leb128): Handle values that do not
